# Z-NITE

./: .gitignore  docker-compose.yml  qa_out.txt  qa_results.json  render.yaml
backend/: .env.example  .env.staging.example  Dockerfile  alembic.ini  main.py  nixpacks.toml  pyproject.toml  railway.json  railway.worker.json
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260414_1922_ded24518b32b_initial_schema.py  20260416_1416_e28d91864e52_add_tipo_emissao.py  20260503_0758_a57f116b294b_setup_cnpj_optional.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: auth.py  caixa.py  fiscal.py  gerencial.py  produto.py  setup.py  sync.py  venda.py
backend/app/application/auth/: dto.py  use_cases.py
backend/app/application/caixa/: dto.py  use_cases.py
backend/app/application/fiscal/: dto.py  use_cases.py
backend/app/application/fiscal/services/: fiscal_service.py
backend/app/application/produto/: dto.py  use_cases.py
backend/app/application/sync/: dto.py  use_cases.py
backend/app/application/venda/: dto.py  use_cases.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/infrastructure/fiscal/: __init__.py  focus_nfe.py  gateway.py  mock_gateway.py  payload_builder.py
backend/app/infrastructure/security/: __init__.py  jwt_handler.py  password_handler.py  redis_blacklist.py
backend/app/workers/: fiscal_worker.py
backend/scripts/: qa_full.py  seed_dev.py  test_fiscal_gerencial.py
backend/tests/: conftest.py  test_pdv_vertical_slice.py  test_setup.py
backend/tests/unit/: conftest.py
(+82 files in other folders)
